adding anet website

--- a/index.html
+++ b/index.html
@@ -773,7 +773,11 @@ IARPA and NIST funding. I developed computer vision algorithms for detection and
     </div>
 
     <div class="btn-links">
-
+    <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="http://activity-net.org/" target="_blank" rel="noopener">
+    
+  Website
+  </a>
+  
   <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://github.com/activitynet" target="_blank" rel="noopener">
     
     Code
