--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
 <!-- <h1 id="welcome">Welcome!</h1> -->
 
-<p>PhD student at <a href="https://home.dartmouth.edu/" target="_blank">Dartmouth</a> at <a href="https://web.cs.dartmouth.edu/" target="_blank">CS Deparment</a> in collaboration with <a href="https://geiselmed.dartmouth.edu/" target="_blank">Geisel School of Medicine </a>. My research interests span computer vision, artificial intelligence and robotics. Specifically, how to computers, robots and artificial agents perceive and reason about the world as we humans do. I am also interested on understanding human behavior from sensory data, medical applications and human-computer interaction.</p>
+<p>PhD student at <a href="https://home.dartmouth.edu/" target="_blank">Dartmouth</a> at <a href="https://web.cs.dartmouth.edu/" target="_blank">CS Department</a>. My research interests span computer vision, artificial intelligence and robotics. Specifically, how to computers, robots and artificial agents perceive and reason about the world as we humans do. I am also interested on understanding human behavior from sensory data, medical applications and human-computer interaction.</p>
 
 
     <div class="row">
@@ -367,7 +367,7 @@
             <i><img src="img/Dartmouth_College_Logo.png" style="position: absolute;left: -2.5rem;width: 2rem;top: 0.14285714em;text-align: center;"></i>
             </a>
             <div class="description">
-              <p class="course">PhD at Computer Science</p>
+              <p class="course">PhD at Computer Science, 2021</p>
               <p class="institution">Dartmouth</p>
             </div>
           </li>
