--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <p>
       <a href="/">home</a>
       <a href="https://github.com/waybarrios">github</a>
-      <a href="https://scholar.google.com.co/citations?user=MPJZRmsAAAAJ&hl=en">google-scholar</a>
+      <a href="https://scholar.google.com.co/citations?user=MPJZRmsAAAAJ&hl=en">google-scholar</a>}     
+      <a href="https://www.wiqonn.com/" target="_blank">wiqonn</a>
+
+      
     </p>
     <hr>
   </div>
@@ -38,7 +41,7 @@
 <li>Audiophile &amp; amateur musician</li>
 <li>Water sports: It's always better to be near the sea</li>
 <li>Sometimes I'm a geek and like to do reverse-engineering</li>
-<li>I founded <a herf="https://wiqonn.com">Wiqonn</a> a tech startup based in Latin America, specializing in Artificial Intelligence, data analysis, and software development</li>
+<li>I founded <a href="https://wiqonn.com" style="text-decoration: underline;">Wiqonn</a> a tech startup based in Latin America, specializing in Artificial Intelligence, data analysis, and software development</li>
 </ul>
 <h4>Contact:</h4>
 <ul>
