--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
       <a href="/">home</a>
       <a href="https://github.com/waybarrios">github</a>
-      <a href="https://scholar.google.com.co/citations?user=MPJZRmsAAAAJ&hl=en">google-scholar</a>}     
+      <a href="https://scholar.google.com.co/citations?user=MPJZRmsAAAAJ&hl=en">google-scholar</a>     
       <a href="https://www.wiqonn.com/" target="_blank">wiqonn</a>
 
       
