--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="https://github.com/waybarrios">github</a>
       <a href="https://scholar.google.com.co/citations?user=MPJZRmsAAAAJ&hl=en">google-scholar</a>     
       <a href="https://www.wiqonn.com/" target="_blank">wiqonn</a>
-
+      <a href="https://discord.com/users/waybarrios" target="_blank">discord</a>
       
     </p>
     <hr>
